--- a/action.yml
+++ b/action.yml
@@ -2,10 +2,10 @@ name: 'Your name here'
 description: 'Provide a description here'
 author: 'Your name or organization here'
 inputs:
-  milliseconds: # change this
+  metis_api_key:
+    description: metis api key project identifier
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    default: ''
 runs:
   using: 'node16'
   main: 'dist/index.js'
