--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,10 @@ inputs:
     description: metis api key project identifier
     required: true
     default: ''
+  target_url:
+    description: target url
+    required: false
+    default: ''
 runs:
   using: 'node16'
   main: 'dist/index.js'
